fix layout problem with quicklinks

--- a/src/static/css/asm.css
+++ b/src/static/css/asm.css
@@ -713,6 +713,7 @@ select:disabled, input:disabled, textarea:disabled {
 /** QUICKLINKS ========================== */
 .asm-quicklinks {
     font-weight: bold;
+    margin-top: 10px;
 }
 
 .asm-quicklinks a {
